--- a/.air.conf
+++ b/.air.conf
@@ -17,7 +17,7 @@ bin = "tmp/api"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html", "hbs"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["build", "tmp", "vendor", "resources", "uploads"]
+exclude_dir = ["build", "tmp", "vendor", "resources", "uploads", , ".imgs"]
 # Watch these directories if you specified.
 include_dir = []
 # Exclude files.
